# anvil

./: .anvilrc  .gitignore  .gitreview  .mailmap  .testr.conf  AUTHORS  HACKING.md  MANIFEST.in  README.md  README.rst  checks.sh  euca.sh  nose.cfg  optional-requirements.txt  prepare.sh  pylintrc  requirements.txt  run_checks.sh  run_tests.py  run_tests.sh  setup.cfg  setup.py  smithy  stack  test-requirements.txt  tox.ini  warmup  warmup.sh
anvil/: __main__.py  action.py  actions.py  async.py  bootstrap.py  cfg.py  cfg_helpers.py  colorizer.py  component.py  constants.py  decorators.py  distro.py  downloader.py  env.py  env_rc.py  exceptions.py  importer.py  ini_parser.py  libvirt.py  log.py  opts.py  origins.py  packager.py  passwords.py  patcher.py  persona.py  phase.py  pip.py  pprint.py  resolver.py  settings.py  shell.py  test.py  trace.py  type_utils.py  utils.py  version.py
conf/: anvil.ini  logging.ini  stack.ini
devstack/: Component.py  Config.py  Db.py  Downloader.py  Environment.py  Exceptions.py  Glance.py  Horizon.py  Img.py  Keystone.py  KeystoneClient.py  Logger.py  Nova.py  NovaClient.py  NovaConf.py  OpenstackX.py  Options.py  Packager.py  Pip.py  Quantum.py  Rabbit.py  Runner.py  Shell.py  Swift.py  Trace.py  Util.py  actions.py  cfg.py  cfg_helpers.py  colorizer.py  colorlog.py  component.py  constants.py  date.py  decorators.py  deps.py  distro.py  downloader.py  env.py  env_rc.py  (+15 more)
docs/: README.rst
guides/: SINGLE.md
multipip/: README.rst  py2rpm
tests/: test_db.py  test_distro.py  test_importer.py  test_passwords.py
tools/: README.rst  (+50 more)
(+559 files in other folders)
