[metadata]
name = anvil
version = 2013.2
summary = A tool to forge raw OpenStack into a productive tool
description-file =
    README.rst
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
home-page = http://anvil.readthedocs.org/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    anvil

scripts =
    tools/multipip
    tools/pip-download
    tools/py2rpm
    tools/specprint
    tools/yumfind
    tools/yyoom

[nosetests]
verbosity=2

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html
